# AoC_2024

./: .gitignore  LICENSE  README.md
Day_1/cpp/: AoC_2024_Day_1.cpp  AoC_2024_Day_1.h  CMakeLists.txt
Day_2/cpp/: AoC_2024_Day_2.cpp  AoC_2024_Day_2.h  CMakeLists.txt
Day_3/rust/src/: main.rs
Templates/cpp/: CMakeLists.txt  main.cpp
